fixing menu overflow

--- a/src/main.scss
+++ b/src/main.scss
@@ -9,3 +9,7 @@ html {
   background-color: $html-bg-color;
   scroll-behavior: smooth;
 }
+
+.menu-opened {
+  overflow: hidden;
+}
